# llm-api-rs

./: Cargo.toml  README.md
examples/: anthropic.rs  deepseek.rs  gemini.rs  ollama.rs  openai.rs  xai.rs
src/: error.rs  lib.rs
src/core/: client.rs  mod.rs
src/providers/: anthropic.rs  deepseek.rs  gemini.rs  groq.rs  mod.rs  ollama.rs  openai.rs  together.rs  xai.rs
