[package]
name = "llm-api-rs"
version = "0.1.0"
edition = "2021"
authors = ["Dongri Jin <dongrium@gmail.com>"]
license = "MIT"
description = "LLM API client library for Rust"
repository = "https://github.com/dongri/llm-api-rs"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0.50"
async-trait = "0.1.72"
